# ieor4576_project_1

./: Dockerfile  README.md  app.py  index.html  pyproject.toml
evals/: conftest.py  golden_dataset.py  test_golden.py  test_refusal_detection.py  test_rubric.py
